# hhh-audit-service

./: .dockerignore  .gitignore  LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
src/: main.py
src/application/ports/inbound/: audit_service.py
src/application/ports/outbound/: audit_repository.py
src/application/services/: audit_service_impl.py
src/domain/exceptions/: audit_exceptions.py
src/domain/models/: audit_event.py
src/infrastructure/adapters/inbound/api/: audit_router.py
src/infrastructure/adapters/inbound/events/: audit_event_handler.py
src/infrastructure/adapters/outbound/persistence/: audit_persistence_mapper.py  mongo_audit_repository.py
src/infrastructure/config/: dependencies.py  settings.py
tests/: conftest.py  test_app_startup.py  test_audit_event.py  test_audit_event_handler.py  test_audit_persistence_mapper.py  test_audit_service_impl.py  test_domain.py  test_health.py  test_mongo_audit_repository.py  test_settings.py
