[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hhh-audit-service"
version = "0.1.0"
description = "Audit log microservice for H³ — Hexadian Hauling Helper"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "opyoid>=0.6,<4.0",
    "motor>=3.6,<4",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "hexadian-auth-common[fastapi]>=2.1.0,<3",
    "hhh-events>=0.2.0,<0.3",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "pytest-cov>=6.0",
    "diff-cover>=9.0",
    "ruff>=0.9",
    "httpx>=0.28",
    "pytest-httpserver>=1.0",
    "cryptography>=42",
    "PyJWT>=2.0",
    "anyio>=4.0",
]

[tool.uv.sources]
hexadian-auth-common = { index = "hexadian" }
hhh-events = { index = "hexadian" }

[[tool.uv.index]]
name = "hexadian"
url = "http://z12trh7jzskrmq7blkanpj05.212.227.227.33.sslip.io/hexadian/stable/+simple/"
explicit = true

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
]
